# python-retail

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  Q01_HighestSalesValue.ipynb  Q02_TotalSalesByOrderDate.ipynb  Q03_TotalSalesByState.ipynb  Q05_SegmentHighestTotalSales.ipynb  Q09_AverageSalesSegment.ipynb  Q10_TotalSalesByCategory.ipynb  Q1_HighestSalesValue.ipynb  Q2_TotalSalesByOrderDate.ipynb  Q4_HighestSalesCities.ipynb  Q6_SegmentTotalPerYear.ipynb  Q7_CalculateDiscount.ipynb  Q7_Q8_CalculateDiscount.ipynb  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: dataset.csv
scripts/: strip_notebook_outputs.py
src/retail_analytics/: __init__.py  data_io.py  paths.py  plots.py  transforms.py
tests/: test_data_io.py
