[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-retail"
version = "0.1.0"
description = "Retail analytics project with notebook and modular Python workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "matplotlib>=3.8,<4",
  "seaborn>=0.13,<1",
  "jupyterlab>=4.2,<5",
]

[project.optional-dependencies]
dev = [
  "black>=24.4,<26",
  "pre-commit>=3.8,<5",
  "pytest>=8.2,<9",
  "ruff>=0.6,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
